# aws-glue-iceberg-lakehouse-etl

./: .gitignore  README.md  pyproject.toml  samconfig.toml  template.yaml
.aws-sam/: build.toml
docs/: END_TO_END_ETL_PIPELINE.MD
glue/: bronze_ingest_customers.py  bronze_ingest_orders.py  bronze_ingest_products.py  gold_build_daily_product_sales.py  init_iceberg_tables.py  silver_load_fact_orders.py  silver_merge_dim_customer_scd2.py  silver_merge_dim_product_scd2.py
scripts/: delete_stack.sh  deploy_stack.sh
src/lakehouse_etl/io/: paths.py
src/lakehouse_etl/transforms/: bronze.py  fact_orders.py  gold.py  scd2.py
src/lakehouse_etl/util/: spark.py
src/lambdas/compute_yesterday_dt/: app.py
tests/spark/: conftest.py
tests/spark/lakehouse_etl/transforms/: test_bronze.py  test_fact_orders.py  test_gold.py  test_scd2.py
tests/unit/lakehouse_etl/io/: test_paths.py
tests/unit/lambdas/: test_compute_yesterday_dt.py
